--- a/client/scss/_layout.scss
+++ b/client/scss/_layout.scss
@@ -51,7 +51,6 @@
 
 }
 
-
 #bar-title {
   cursor: default;
   margin-left: auto;
@@ -59,7 +58,6 @@
   width: 50%;
   text-align: center;
 }
-
 
 .loading-indicator {
 
@@ -123,7 +121,7 @@ section {
 
 .xyz-player-container {
   position: relative;
-  z-index: 3
+  z-index: 3;
 }
 
 .ng-toast {
